removed ble midi and added some color tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.tabSize": 4,
     "files.associations": {
-        "*.h": "c",
+        "*.h": "cpp",
         "array": "cpp",
         "string": "cpp",
         "*.tcc": "cpp",
