First version of the final program

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,10 @@ board = lolin32
 framework = arduino
 
 lib_deps =
+    Bounce2@2.53
     FastLED@3.3.3
-    https://github.com/lathoub/Arduino-BLE-MIDI.git
+    MIDI Library@5.0.2
+# https://github.com/lathoub/Arduino-BLE-MIDI.git
 
 upload_speed = 921600
 monitor_speed = 115200
